--- a/app/src/main/res/layout/activity_treatment.xml
+++ b/app/src/main/res/layout/activity_treatment.xml
@@ -2,14 +2,15 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/backgroundmse1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Treatment">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height=""
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
@@ -20,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.132"
-        tools:srcCompat="@drawable/login" />
+        tools:srcCompat="@drawable/medicine" />
 
     <TextView
         android:id="@+id/textView"
