--- a/app/src/main/res/layout/activity_treatment.xml
+++ b/app/src/main/res/layout/activity_treatment.xml
@@ -9,10 +9,13 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height=""
+        android:scaleType="fitCenter"
+        android:src="@drawable/medicine"
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -21,8 +24,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.132"
-        tools:srcCompat="@drawable/medicine" />
-
+        />
     <TextView
         android:id="@+id/textView"
         android:layout_width="210dp"
@@ -31,7 +33,10 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="Prescribed SALTS"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:textColor="@color/cardview_light_background"
+        android:text="SALTS"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -48,6 +53,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
+
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
