--- a/app/src/main/res/layout/activity_dadi.xml
+++ b/app/src/main/res/layout/activity_dadi.xml
@@ -29,8 +29,8 @@
 
     <TextView
         android:id="@+id/textView3"
-        android:layout_width="301dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -44,8 +44,8 @@
 
     <TextView
         android:id="@+id/dadi11"
-        android:layout_width="326dp"
-        android:layout_height="124dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
