--- a/app/src/main/res/layout/activity_treatment.xml
+++ b/app/src/main/res/layout/activity_treatment.xml
@@ -27,8 +27,8 @@
         />
     <TextView
         android:id="@+id/textView"
-        android:layout_width="210dp"
-        android:layout_height="38dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
@@ -46,14 +46,14 @@
 
     <TextView
         android:id="@+id/salt11"
-        android:layout_width="166dp"
-        android:layout_height="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text="Salt-1"
         android:textColor="@color/cardview_light_background"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -65,13 +65,13 @@
 
     <TextView
         android:id="@+id/salt22"
-        android:layout_width="166dp"
-        android:layout_height="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text="Salt-2"
         android:textColor="@color/cardview_light_background"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
