--- a/app/src/main/res/layout/activity_dadi.xml
+++ b/app/src/main/res/layout/activity_dadi.xml
@@ -10,7 +10,6 @@
     <ImageView
         android:id="@+id/imageView2"
         android:scaleType="fitCenter"
-
         android:layout_marginTop="20dp"
         android:layout_gravity="center"
         android:layout_width="150dp"
@@ -35,6 +34,9 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:gravity="center"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="35dp"
+        android:textStyle="bold"
         android:text="DADI KE NUSHKE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,31 +46,36 @@
 
     <TextView
         android:id="@+id/dadi11"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="283dp"
+        android:layout_height="57dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="20dp"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.681"
+        app:layout_constraintHorizontal_bias="0.57"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.169" />
+        app:layout_constraintVertical_bias="0.143" />
 
     <TextView
         android:id="@+id/dadi22"
-        android:layout_width="327dp"
-        android:layout_height="125dp"
+        android:layout_width="287dp"
+        android:layout_height="56dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
+        android:textColor="@color/cardview_light_background"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.691"
+        app:layout_constraintHorizontal_bias="0.592"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
-        app:layout_constraintVertical_bias="0.723" />
+        app:layout_constraintVertical_bias="0.473" />
 </android.support.constraint.ConstraintLayout>
